--- a/index.html
+++ b/index.html
@@ -20,39 +20,34 @@
 
         <main class="container mx-auto px-4 py-8">
             <section class="space-y-8 mb-8">
-                <div class="relative h-96">
+                <div class="relative h-96 menu-container">
                     <div class="rounded-image">
                         <img src="images/kitchen.jpg" alt="Kitchen" class="rounded-tl-3xl rounded-br-3xl">
                     </div>
                     <button class="menu-button" data-menu="kitchen">KITCHEN КУХНЯ</button>
-                    <div class="menu-content" id="kitchen-menu">
-                        <img src="images/kitchen-menu.jpg" alt="Kitchen Menu" width="400" height="600">
-                    </div>
+                    <a href="images/kitchen-menu.jpg" target="_blank" class="menu-overlay"></a>
                 </div>
-                <div class="relative h-96">
+                <div class="relative h-96 menu-container">
                     <div class="rounded-image">
                         <img src="images/lunch.jpg" alt="Lunch" class="rounded-tl-3xl rounded-br-3xl">
                     </div>
                     <button class="menu-button" data-menu="lunch">LUNCH</button>
                     <p class="absolute bottom-4 left-4 text-xl">Lunch time: 12:00 - 15:00</p>
-                    <div class="menu-content" id="lunch-menu">
-                        <img src="images/lunch-menu.jpg" alt="Lunch Menu" width="400" height="600">
-                    </div>
+                    <a href="images/lunch-menu.jpg" target="_blank" class="menu-overlay"></a>
                 </div>
-                <div class="relative h-96">
+                <div class="relative h-96 menu-container">
                     <div class="rounded-image">
                         <img src="images/ribs.jpg" alt="Ribs" class="rounded-tl-3xl rounded-br-3xl">
                     </div>
                     <button class="menu-button" data-menu="ribs">RIBS</button>
+                    <a href="images/ribs-menu.jpg" target="_blank" class="menu-overlay"></a>
                 </div>
-                <div class="relative h-96">
+                <div class="relative h-96 menu-container">
                     <div class="rounded-image">
                         <img src="images/bar.jpg" alt="Bar" class="rounded-tl-3xl rounded-br-3xl">
                     </div>
                     <button class="menu-button" data-menu="bar">BAR</button>
-                    <div class="menu-content" id="bar-menu">
-                        <img src="images/bar-menu.jpg" alt="Bar Menu" width="400" height="600">
-                    </div>
+                    <a href="images/bar-menu.jpg" target="_blank" class="menu-overlay"></a>
                 </div>
             </section>
 
