--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
 </head>
 <body>
     <div class="min-h-screen bg-black text-white">
-        <header class="relative h-screen">
-            <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover rounded-tl-3xl rounded-br-3xl">
-                <source src="images/trinity-pub-background.mp4" type="video/mp4">
-            </video>
-            <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center rounded-tl-3xl rounded-br-3xl">
-                <h1 class="text-6xl font-bold">TRINITY</h1>
-            </div>
+        <header class="fixed-header">
+            <nav>
+                <ul class="header-menu">
+                    <li><button class="nav-item" data-menu="kitchen">МЕНЮ</button></li>
+                    <li><button class="nav-item" data-menu="bar">БАР</button></li>
+                    <li><a href="#" class="nav-item logo">TRINITY</a></li>
+                    <li><a href="https://vk.com/trinitypub" target="_blank" class="nav-item">ИНФО</a></li>
+                    <li><a href="https://yandex.ru/maps/-/CCUBiMxp~A" target="_blank" class="nav-item">РЕЖИМ</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <main class="container mx-auto px-4 py-8">
+        <main class="container mx-auto px-4 py-8 mt-24">
+            <section class="relative h-screen mb-8">
+                <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover rounded-tl-3xl rounded-br-3xl">
+                    <source src="images/trinity-pub-background.mp4" type="video/mp4">
+                </video>
+                <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center rounded-tl-3xl rounded-br-3xl">
+                    <h1 class="text-6xl font-bold trinity-title">TRINITY PUB</h1>
+                </div>
+            </section>
+
             <section class="space-y-8 mb-8">
                 <div class="relative h-96 menu-container">
                     <div class="rounded-image">
@@ -99,16 +111,49 @@
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                             <circle cx="12" cy="10" r="3"></circle>
                         </svg>
-                        <p class="text-xl font-bold">TRINITY Pub</p>
-                        <p>123 Main Street, City, Country</p>
+                        <p class="text-xl font-bold">TRINITY PUB</p>
+                        <p>Баумана 44/8, Казань, Россия</p>
+                        <a href="https://maps.app.goo.gl/XBjTAhVHPr5DCyfu7" target="_blank" class="mt-2 inline-block bg-white text-black px-4 py-2 rounded-lg hover:bg-opacity-80 transition-colors">Открыть в Google Maps</a>
                     </div>
                 </div>
             </section>
         </main>
 
+        <!-- Добавляем модальные окна для меню и бара -->
+        <div id="kitchen-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <img src="images/kitchen-menu.jpg" alt="Kitchen Menu" class="w-full h-auto">
+            </div>
+        </div>
+
+        <div id="lunch-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <img src="images/lunch-menu.jpg" alt="Lunch Menu" class="w-full h-auto">
+            </div>
+        </div>
+
+        <div id="ribs-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <img src="images/ribs-menu.jpg" alt="Ribs Menu" class="w-full h-auto">
+            </div>
+        </div>
+
+        <div id="bar-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <img src="images/bar-menu.jpg" alt="Bar Menu" class="w-full h-auto">
+            </div>
+        </div>
+
         <footer class="bg-gray-900 text-center py-4 mt-8">
             <p>&copy; 2024 TRINITY Pub. All rights reserved.</p>
         </footer>
+    </div>
+    <div class="bottom-bar">
+        <button class="booking-button">БРОНЬ</button>
     </div>
     <script src="script.js"></script>
 </body>
