--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>TRINITY Pub</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/framer-motion/6.5.1/framer-motion.min.js"></script>
@@ -22,12 +22,12 @@
         </header>
 
         <main class="container mx-auto px-4 py-8 mt-24">
-            <section class="relative h-screen mb-8">
-                <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover rounded-tl-3xl rounded-br-3xl">
+            <section class="video-section mb-8">
+                <video autoplay loop muted playsinline>
                     <source src="images/trinity-pub-background.mp4" type="video/mp4">
                 </video>
-                <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center rounded-tl-3xl rounded-br-3xl">
-                    <h1 class="text-6xl font-bold trinity-title">TRINITY PUB</h1>
+                <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+                    <h1 class="trinity-title">TRINITY PUB</h1>
                 </div>
             </section>
 
